# whyblocked

./: .drone.yml  .gitmodules  CMakeLists.txt  README.md  build_manpage.sh  de.tastytea.Whyblocked.appdata.xml  de.tastytea.Whyblocked.desktop  packages.CMakeLists.txt  whyblocked.1.adoc
src/: interface_qt.cpp  interface_qt.hpp  interface_text.cpp  interface_text.hpp  whyblock.cpp  whyblocked.cpp  whyblocked.hpp  whyblocked.ui  whyblocked_add.ui  xdgcfg.cpp  xdgcfg.hpp
src/qt/: dialog_add.cpp  dialog_add.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  whyblocked.ui
translations/: CMakeLists.txt  whyblocked_de.ts  whyblocked_en.ts
